# adi-prototype

./: .gitignore  AbstractReducedRHS.hpp  CMakeLists.txt  CollectiveCommunicator.cpp  CouplingInitializer.hpp  EMSquare2D.cpp  EMSquare2D.hpp  LocalReducedRHS.cpp  LocalSolver.cpp  LocalSolver.hpp  Makefile  MatrixBlock.cpp  MatrixBlock.hpp  MatrixInitializer.hpp  RHSCollection.cpp  RHSCollection.hpp  RHSCommunicator.hpp  RemoteReducedRHS.cpp  Simulation.cpp  Simulation.hpp  Simulation3D.cpp  Simulation3D.hpp  TDCoupling.cpp  TDCoupling.hpp  accuracy_check_three_scatter.cpp  collective_emsquare2d.cpp  common.hpp  cube_collective.cpp  cube_collective_dump.cpp  cube_three_scatter.cpp  cube_three_scatter_dump.cpp  delegated_tridiagtest.cpp  largeMsgEMSquare2D.cpp  largeMsgEMSquare2D.hpp  main.cpp  multiple_tridiagtest.cpp  nonblocking_emsquare2d.cpp  one_line.cpp  one_line_chunked.cpp  plot_fields.py  (+15 more)
